--- a/containerized-accounts/Dockerfile
+++ b/containerized-accounts/Dockerfile
@@ -1,5 +1,4 @@
-FROM openjdk
-MAINTAINER Taner Diler <taner.diler@gmail.com>
+FROM openjdk:8-alpine
 ADD target/containerized-accounts-0.0.1-SNAPSHOT.jar containerized-accounts.jar
 ENTRYPOINT ["java", "-jar", "/containerized-accounts.jar"]
 EXPOSE 2222
