--- a/containerized-discovery/Dockerfile
+++ b/containerized-discovery/Dockerfile
@@ -1,5 +1,4 @@
-FROM openjdk
-MAINTAINER Taner Diler <taner.diler@gmail.com>
+FROM openjdk:8-alpine
 ADD target/containerized-discovery-0.0.1-SNAPSHOT.jar containerized-discovery.jar
 ENTRYPOINT ["java", "-jar", "/containerized-discovery.jar"]
 EXPOSE 8761
