--- a/containerized-gateway/Dockerfile
+++ b/containerized-gateway/Dockerfile
@@ -1,5 +1,4 @@
-FROM openjdk
-MAINTAINER Taner Diler <taner.diler@gmail.com>
+FROM openjdk:8-alpine
 ADD target/containerized-gateway-0.0.1-SNAPSHOT.jar containerized-gateway.jar
 ENTRYPOINT ["java", "-jar", "/containerized-gateway.jar"]
 EXPOSE 8761
