--- a/containerized-main/Dockerfile
+++ b/containerized-main/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk
+FROM openjdk:8-alpine
 MAINTAINER Taner Diler <taner.diler@gmail.com>
 ADD target/containerized-main-0.0.1-SNAPSHOT.jar containerized-main.jar
 ENTRYPOINT ["java", "-jar", "/containerized-main.jar"]
