--- a/containerized-products/Dockerfile
+++ b/containerized-products/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk
+FROM openjdk:8-alpine
 MAINTAINER Taner Diler <taner.diler@gmail.com>
 ADD target/containerized-products-0.0.1-SNAPSHOT.jar containerized-products.jar
 ENTRYPOINT ["java", "-jar", "/containerized-products.jar"]
