--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3'
 services:
 
   discovery:
-    image: tanerdiler/service-discovery
+    image: aws/service-discovery
     container_name: service-discovery
     build:
       context: ./containerized-discovery
       dockerfile: Dockerfile
     ports:
       - "8761:8761"
+    environment:
+      - spring.profiles.active=peer1
 
 #   cassandra-node-1:
 #     hostname: cassandra-1
@@ -32,70 +34,70 @@ services:
 #      - 7199
 #      - 9042
 #      - 9160
-  gateway:
-    image: tanerdiler/service-gateway
-    container_name: service-gateway
-    build:
-      context: ./containerized-gateway
-      dockerfile: Dockerfile
-    ports:
-      - "8762:8762"
-    depends_on:
-      - discovery
-    links:
-      - discovery:discovery
-  accounts:
-    image: tanerdiler/service-accounts-api
-    container_name: service-accounts
-    build:
-      context: ./containerized-accounts
-      dockerfile: Dockerfile
-    ports:
-      - "7500:2222"
-    depends_on:
-      - discovery
-#      - cassandra-node-1
-    links:
-      - discovery:discovery
+#  gateway:
+#    image: tanerdiler/service-gateway
+#    container_name: service-gateway
+#    build:
+#      context: ./containerized-gateway
+#      dockerfile: Dockerfile
+#    ports:
+#      - "8762:8762"
+#    depends_on:
+#      - discovery
+#    links:
+#      - discovery:discovery
+#  accounts:
+#    image: tanerdiler/service-accounts-api
+#    container_name: service-accounts
+#    build:
+#      context: ./containerized-accounts
+#      dockerfile: Dockerfile
+#    ports:
+#      - "7500:2222"
+#    depends_on:
+#      - discovery
+##      - cassandra-node-1
+#    links:
+#      - discovery:discovery
 
-  products:
-    image: tanerdiler/service-products-api
-    container_name: service-products
-    build:
-      context: ./containerized-products
-      dockerfile: Dockerfile
-    ports:
-      - "7501:2222"
-    depends_on:
-      - accounts
-    links:
-      - discovery:discovery
-
-  orders:
-    image: tanerdiler/service-orders-api
-    container_name: service-orders
-    build:
-      context: ./containerized-orders
-      dockerfile: Dockerfile
-    ports:
-      - "7502:2222"
-    depends_on:
-      - products
-    links:
-      - discovery:discovery
-
-  main:
-    image: tanerdiler/service-main-api
-    container_name: service-main
-    build:
-      context: ./containerized-main
-      dockerfile: Dockerfile
-    ports:
-      - "7503:2222"
-    depends_on:
-      - orders
-    links:
-      - discovery:discovery
-      - accounts:accounts
-      - products:products
-      - orders:orders
+#  products:
+#    image: tanerdiler/service-products-api
+#    container_name: service-products
+#    build:
+#      context: ./containerized-products
+#      dockerfile: Dockerfile
+#    ports:
+#      - "7501:2222"
+#    depends_on:
+#      - accounts
+#    links:
+#      - discovery:discovery
+#
+#  orders:
+#    image: tanerdiler/service-orders-api
+#    container_name: service-orders
+#    build:
+#      context: ./containerized-orders
+#      dockerfile: Dockerfile
+#    ports:
+#      - "7502:2222"
+#    depends_on:
+#      - products
+#    links:
+#      - discovery:discovery
+#
+#  main:
+#    image: tanerdiler/service-main-api
+#    container_name: service-main
+#    build:
+#      context: ./containerized-main
+#      dockerfile: Dockerfile
+#    ports:
+#      - "7503:2222"
+#    depends_on:
+#      - orders
+#    links:
+#      - discovery:discovery
+#      - accounts:accounts
+#      - products:products
+#      - orders:orders
