--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>1.4.2.RELEASE</version>
 	</parent>
 
 	<properties>
-		<spring-cloud.version>Brixton.RELEASE</spring-cloud.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring.cloud.version>Finchley.RC1</spring.cloud.version>
+		<spring.cloud.version>Camden.SR3</spring.cloud.version>
 	</properties>
 
 	<modules>
